		Reconciling the *.{c,h} files between the 1991 and 2021 translations (the second round).
		The segment in dsub.{c,f} responsible for producing variations in text output has been marked.
		This is the reason that ‟Test.in” will produce different results on different runs
		for the Fortran version (and the 2021 C translation, once a run-time baseline is established).
		1991: Missing comments from the Fortran original have been restored.
		2021: Extra commnents from the Fortran original and translator have been removed.
		2021: Removed a bug in rooms.{c,f} arising from ‟TCHBT” being mistyped as ‟CHBT” in rooms.f and mistranslated.
2021/09/23	Reconciling differences between the adventurer, object and villain tables.
		The Fortran original split the large arrays {a,o,v}voc[] into tables bundled into common blocks,
		probably to overcome limitations on table sizes.
		The 1991 C translation reintegrated the tables and translated then as such, instead of as common blocks.
2021/09/23	Lifting the common blocks {dir,prp,buz}voc, respectively, to constant integer arrays {d,p,b}voc[].
		This is a bona fide upgrade: it goes beyond the Fortran original and 1991 C translation.
2021/09/23	Reconciling the remaining differences between the translations of the common blocks (/vers/).
		Changing vedit, in /vers/ (back) to character, from integer.
2021/09/23	Simplifying the translations of the common blocks:
		∙	removing excess "#defines"-s and de-mangling names/aliases,
		∙	lifting constant common blocks to enums, constant arrays or constants, wherever possible.
2021/09/24	Recoding of the (translations of the) Arithmetic IF statements
2021/09/24	Further simplification and reduction of the I/O-related f2c library routines.
2021/09/24	Most of the file I/O in ‟F2C.h” has been nativized and eliminated.
		The I/O for the index and save files is now operational.
		The I/O for the story file is partially operational.
2021/09/25	Elimination of the remaining non-I/O functions from ‟F2C.h”.