@@ -1,5 +1,5 @@
 // Revisions Copyright (c) 2021, Darth Spectra (Lydia Marie Williamson).
-#include "F2C.h"
+#include "extern.h"
 #include <string.h>
 
 // A wrapper for the built-in functions defined in the f2c library.
